# jitsi-sctp

./: .gitignore  .gitmodules  README.md  pom.xml
.github/workflows/: ci.yml  maven.yml
jniwrapper/: pom.xml
jniwrapper/java/: pom.xml
jniwrapper/java/src/main/java/cz/adamh/utils/: NativeUtils.java
jniwrapper/java/src/main/java/org/jitsi_modified/sctp4j/: IncomingSctpDataHandler.java  OutgoingSctpDataHandler.java  SctpJni.java
jniwrapper/jnilib/: assembly.xml  pom.xml
jniwrapper/jnilib/src/test/java/: SctpJniTest.java
jniwrapper/native/: assembly.xml  pom.xml
jniwrapper/native/src/: CMakeLists.txt  org_jitsi_modified_sctp4j_Sctp.c  org_jitsi_modified_sctp4j_SctpJni.c
jniwrapper/native/src/main/resources/: README.md
jniwrapper/native/src/main/resources/lib/darwin/: libjnisctp.jnilib
resources/: Dockerfile  fetch-maven.sh  macos-build-all.sh  macos-build.sh  ubuntu-build-all.sh  ubuntu-build-docker.sh  ubuntu-build.sh  ubuntu-packages.sh
sctp/: pom.xml
sctp/src/main/java/org/jitsi_modified/sctp4j/: DirectLink.java  NetworkLink.java  SampleClient.java  SampleLoop.java  SampleServer.java  Sctp.java  Sctp4j.java  SctpClientSocket.java  SctpDataSender.java  SctpServerSocket.java  SctpSocket.java  SctpSocket2.java  UdpLink.java
sctp/src/main/java/org/jitsi_modified/sctp4j/example/: Client.java  Server.java
sctp/src/main/java/org/jitsi_modified/sctp4j/util/: SctpParser.java
sctp/src/test/java/org/jitsi_modified/sctp4j/: Sctp4jTest.java
src/main/java/org/jitsi_modified/sctp4j/: IncomingSctpDataHandler.java  OutgoingSctpDataHandler.java  Sctp4j.java  SctpClientSocket.java  SctpDataCallback.java  SctpJni.java  SctpNotification.java  SctpServerSocket.java  SctpSocket.java
src/main/java/org/jitsi_modified/sctp4j/example/: Client.java  Server.java
src/main/native/: org_jitsi_modified_sctp4j_SctpJni.c
src/main/resources/lib/darwin/: libjnisctp.jnilib
src/test/java/: SctpJniTest.java
usrsctp/: assembly.xml  javalibs.xml  pom.xml
